--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "compression": "^1.6.2",
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "jade": "^1.11.0",
