--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   },
   "scripts": {
     "build:dev-js": "webpack -d",
-    "build:prod-js": "webpack -p",
-    "build:css": "sass --sourcemap=none --scss $npm_package_config_scss_file $npm_package_config_css_file",
-    "post:css": "postcss --use autoprefixer --autoprefixer.browsers 'last 2 versions' --output $npm_package_config_css_file $npm_package_config_css_file",
+    "build:prod-js": "webpack -p --optimize-minimize",
+    "build:css": "node-sass --output-style=compressed $npm_package_config_scss_file $npm_package_config_css_file",
+    "post:css": "postcss $npm_package_config_css_file --use autoprefixer --output $npm_package_config_css_file",
     "build": "npm-run-all build:prod-js build:css post:css",
     "watch": "npm-run-all --parallel watch:js watch:scss",
     "watch:js": "onchange \"./js\" -- npm run build:dev-js",
@@ -36,6 +36,7 @@
     "babel-core": "^6.13.2",
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.13.2",
+    "node-sass": "^4.5.2",
     "npm-run-all": "^3.0.0",
     "onchange": "^3.2.1",
     "properjs-hobo": "^0.3.10",
