--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
     "scss_file": "./scss/screen.scss"
   },
   "scripts": {
-    "build:dev-js": "webpack -d",
-    "build:prod-js": "webpack -p --optimize-minimize",
-    "build:css": "node-sass --output-style=compressed $npm_package_config_scss_file $npm_package_config_css_file",
-    "post:css": "postcss $npm_package_config_css_file --use autoprefixer --output $npm_package_config_css_file",
-    "build": "npm-run-all build:prod-js build:css post:css",
-    "watch": "npm-run-all --parallel watch:js watch:scss",
-    "watch:js": "onchange \"./js\" -- npm run build:dev-js",
-    "watch:scss": "onchange \"./scss\" -- npm run build:css",
-    "server": "nodemon ./src/weddings.js",
-    "start": "npm-run-all --parallel server watch"
+    "js:dev": "webpack --config webpack.development.js",
+    "js:prod": "webpack --config webpack.production.js",
+    "css:dev": "node-sass --output-style=compressed $npm_package_config_scss_file $npm_package_config_css_file",
+    "css:prod": "postcss $npm_package_config_css_file --use autoprefixer --output $npm_package_config_css_file",
+    "watch:js": "onchange \"./js\" -- npm run js:dev",
+    "watch:scss": "onchange \"./scss\" -- npm run css:dev",
+    "server": "nodemon ./src/weddings.js --config ./nodemon.json -e css,js,jade",
+    "start": "npm-run-all --parallel server watch:*",
+    "build": "npm-run-all js:prod css:dev css:prod",
+    "postinstall": "cd ./node_modules/properjs-hobo && npm install && npm run build -- 'children is eq not attr filter detach remove append closest'"
   },
   "author": "",
   "license": "ISC",
@@ -33,14 +33,17 @@
   },
   "devDependencies": {
     "axios": "^0.14.0",
-    "babel-core": "^6.13.2",
-    "babel-loader": "^6.2.5",
-    "babel-preset-es2015": "^6.13.2",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
     "node-sass": "^4.7.2",
     "npm-run-all": "^3.0.0",
     "onchange": "^3.2.1",
-    "properjs-hobo": "^0.3.10",
+    "properjs-hobo": "^0.3.18",
     "properjs-imageloader": "^0.3.1",
-    "webpack": "^1.13.2"
+    "reload": "^2.2.2",
+    "uglifyjs-webpack-plugin": "^1.1.8",
+    "webpack": "^3.10.0",
+    "webpack-merge": "^4.1.1"
   }
 }
