--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,10 @@
 {
-  "presets": ["env"]
+  "presets": [
+    ["env", {"modules": false}],
+    "stage-1",
+    "react"
+  ],
+  "plugins": [
+    "transform-runtime"
+  ]
 }
