--- a/package.json
+++ b/package.json
@@ -23,19 +23,25 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-runtime": "^6.26.0",
     "body-parser": "^1.15.2",
     "compression": "^1.6.2",
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "jade": "^1.11.0",
     "mailgun-js": "^0.14.2",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
     "smoothscroll-polyfill": "^0.3.4"
   },
   "devDependencies": {
     "axios": "^0.14.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-1": "^6.24.1",
     "node-sass": "^4.7.2",
     "npm-run-all": "^3.0.0",
     "onchange": "^3.2.1",
@@ -44,6 +50,7 @@
     "reload": "^2.2.2",
     "uglifyjs-webpack-plugin": "^1.1.8",
     "webpack": "^3.10.0",
+    "webpack-dev-server": "^3.1.3",
     "webpack-merge": "^4.1.1"
   }
 }
