--- a/package.json
+++ b/package.json
@@ -25,18 +25,26 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.11",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "isomorphic-style-loader": "^4.0.0",
+    "node-sass": "^4.9.0",
     "nodemon": "^1.12.5",
+    "postcss-loader": "^2.1.4",
     "sass-loader": "^7.0.1",
     "style-loader": "^0.21.0",
     "webpack": "^3.10.0",
     "webpack-node-externals": "^1.6.0"
   },
   "dependencies": {
+    "classnames": "^2.2.5",
     "cors": "^2.8.4",
     "express": "^4.16.2",
     "isomorphic-fetch": "^2.2.1",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
+    "react-ga": "^2.5.0",
+    "react-helmet": "^5.2.0",
+    "react-lazyload": "^2.3.0",
     "react-router-dom": "^4.2.2",
     "serialize-javascript": "^1.4.0"
   }
