--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,9 @@
 {
   "presets": [
-    ["env", {"modules": false}],
-    "stage-1",
-    "react"
+    ["@babel/preset-env", {"modules": false}],
+    "@babel/preset-react"
   ],
   "plugins": [
-    "transform-runtime"
+    "@babel/plugin-transform-runtime"
   ]
 }
